syntax = "proto3";

package dev.azure.com.c4ut.TimeClock;

option go_package = "/protofiles;pb";

import "google/protobuf/timestamp.proto";

message FindEmployeeRequest {
    string employee_id = 1;
}

message Employee {
    string id = 1;
    string username = 2;
    string first_name = 3;
    string last_name = 4;
    string email = 5;
    string pis = 6;
    bool enabled = 7;
    bool email_verified = 8;
    google.protobuf.Timestamp created_at = 9;
}

service EmployeeService {
    rpc FindEmployee (FindEmployeeRequest) returns (Employee);
}
